[MHV-41714] fixed issue2 brought up by dimitir where accordion is overlapping above element.

--- a/src/applications/mhv/secure-messaging/sass/search.scss
+++ b/src/applications/mhv/secure-messaging/sass/search.scss
@@ -79,7 +79,7 @@
     }
   }
   .filter-box{
-    margin-top: -30px;
+    margin-top: -10px;
     margin-bottom: -20px;
   }
 
